few view fixes, promotions repository, removed promotions from index page

--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="clear"></div>
     </div>
 </div>
-<div class="box">
+@*<div class="box">
     <div class="container_12">
         <div class="grid_4">
             <div class="block">
@@ -43,9 +43,9 @@
                         <li>Quatro Fromaggi 19 PLN</li>
                         <li>Vegatariana 18 PLN</li>
                     </ul>
-                    @*<div class="div-button">
-                        <a href="#">Order Now!</a>
-                    </div>*@
+                    <div class="div-button">
+                        @Html.ActionLink("Promocje", "Promotions", "Home")
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,15 +56,15 @@
                     <span>Chili con carne</span><br>
                     <em>Tylko u nas oryginalna receptura!</em><br>
                     <p>Chili con carne jeden z elementów kuchni Tex-Mex. Oczywiście jego korzenie wywodzą się z Meksyku (trzeba pamiętać, że Teksas był kiedyś jego częścią). Głowne składniki to różnego rodzaju papryki rzadko spotykane w Polsce oraz wołowina.</p>
-@*                    <div class="div-button">
+                    <div class="div-button">
                         <a href="#">read more</a>
-                    </div>*@
+                    </div>
                 </div>
             </div>
         </div>
         <div class="clear"></div>
     </div>
-</div>
+</div>*@
 
 <!--==============================content================================-->
 <section id="content">
@@ -84,7 +84,7 @@
                 </div>
                 @*<p>Idealna na lato sałatka don'kogutto</p>*@
                 <span class="cost fleft">
-                    <em>$</em>25<strong>.89</strong>
+                    @*<em>$</em>25<strong>.89</strong>*@
                 </span>
                 @*<a href="#" class="button fright top">Order Now!</a>*@
                 <div class="clear"></div>
@@ -100,7 +100,7 @@
                 </div>
                 @*<p>karkówka mucho macho pikantna</p>*@
                 <span class="cost fleft">
-                    <em>$</em>25<strong>.89</strong>
+                    @*<em>$</em>25<strong>.89</strong>*@
                 </span>
                 @*<a href="#" class="button fright top">Order Now!</a>*@
                 <div class="clear"></div>
@@ -116,7 +116,7 @@
                 </div>
                 @*<p>Perfekcyjna grzanka czosnkowa</p>*@
                 <span class="cost fleft">
-                    <em>$</em>25<strong>.89</strong>
+                    @*<em>$</em>25<strong>.89</strong>*@
                 </span>
                 @*<a href="#" class="button fright top">Order Now!</a>*@
                 <div class="clear"></div>
@@ -133,7 +133,7 @@
                 </div>
                 @*<p>Danie dnia.</p>*@
                 <span class="cost fleft">
-                    <em>$</em>25<strong>.89</strong>
+                    @*<em>$</em>25<strong>.89</strong>*@
                 </span>
                 @*<a href="#" class="button fright top">Order Now!</a>*@
                 <div class="clear"></div>
