--- a/Barcaliente.WebUI/Views/Home/NightOrders.cshtml
+++ b/Barcaliente.WebUI/Views/Home/NightOrders.cshtml
@@ -1,7 +1,7 @@
 ﻿<section id="content">
     <div class="container_12">
         <div class="grid_12">
-            <h2>NightOrders</h2>
+            <h2>Dowóz nocny</h2>
             <p class="top">w przygotowaniu...</p>
         </div>
     </div>
