--- a/Barcaliente.WebUI/Views/Home/SpecialOrders.cshtml
+++ b/Barcaliente.WebUI/Views/Home/SpecialOrders.cshtml
@@ -1,7 +1,7 @@
 ﻿<section id="content">
     <div class="container_12">
         <div class="grid_12">
-            <h2>SpecialOrders</h2>
+            <h2>Zamówienia specjalne</h2>
         </div>
     </div>
 </section>
