image name chnage, hardcoded prices for recommended meals

--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
                 <div class="slider camera_wrap camera_azure_skin" id="camera">
                     <div data-src="Content/images/meals/Chiliconcarne.jpg"></div>
                     <div data-src="Content/images/meals/fajita.jpg"></div>
-                    <div data-src="Content/images/meals/greckasałatka.jpg"></div>
+                    <div data-src="Content/images/meals/greckasalatka.jpg"></div>
                     @*<div data-src="Content/images/dishes/slide-3.jpg"></div>*@
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 </div>
                 @*<p>Idealna na lato sałatka don'kogutto</p>*@
                 <span class="cost fleft">
-                    @*<em>$</em>25<strong>.89</strong>*@
+                    18<strong>.00</strong><em>PLN</em>
                 </span>
                 @*<a href="#" class="button fright top">Order Now!</a>*@
                 <div class="clear"></div>
@@ -100,7 +100,7 @@
                 </div>
                 @*<p>karkówka mucho macho pikantna</p>*@
                 <span class="cost fleft">
-                    @*<em>$</em>25<strong>.89</strong>*@
+                    12<strong>.00</strong><em>PLN</em>
                 </span>
                 @*<a href="#" class="button fright top">Order Now!</a>*@
                 <div class="clear"></div>
@@ -116,7 +116,7 @@
                 </div>
                 @*<p>Perfekcyjna grzanka czosnkowa</p>*@
                 <span class="cost fleft">
-                    @*<em>$</em>25<strong>.89</strong>*@
+                    7<strong>.00</strong><em>PLN</em>
                 </span>
                 @*<a href="#" class="button fright top">Order Now!</a>*@
                 <div class="clear"></div>
