--- a/Barcaliente.WebUI/Views/Home/SpecialOrders.cshtml
+++ b/Barcaliente.WebUI/Views/Home/SpecialOrders.cshtml
@@ -2,6 +2,25 @@
     <div class="container_12">
         <div class="grid_12">
             <h2>Zamówienia specjalne</h2>
+            <h3>Przyjmowane z 24h wyprzedzeniem.</h3>
+            <p>Zabrakło ci czasu na przygotowanie kolacji dla przyjaciół? Zadzwoń do nas!</p>
+            <p>Przyjeżdżaja niespodziewani goście?</p>
+            <p>Przykładowe menu dla 4 osób za 200 PLN:</p>
+            <ul>
+                <li>Kanapeczki bankietowe 24szt:
+                    <ul>
+                        <li>z mascarpone i ziołami</li>
+                        <li>śledź a'la łosoś</li>
+                        <li>z awokado i gruszką</li>
+                    </ul>
+                </li>
+                <li>Śliwki z boczkiem</li>
+                <li>Sałatka lodowa z suszonym pomidorem i serem grana padano</li>
+                <li>Antonówka faszerowana kaszanką</li>
+                <li>Pierś kurczaka w sosie śmietanowo-winnym</li>
+                <li>frytki</li>
+            </ul>
+            <p>Serwujemy na półmiskach klienta lub naszych (kaucja 15 PLN/naczynie), bądź na życzenie klienta w opakowaniach jednorazowych.</p>
         </div>
     </div>
 </section>
