--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -10,8 +10,10 @@
     <meta name="author" content="Your name">
     <link rel="stylesheet" href="~/Content/css/camera-slider.css">
     <link rel="stylesheet" type="text/css" media="screen" href="~/Content/css/style.css">
+    <link href="~/Content/css/tooltipster.css" rel="stylesheet" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    @*<script src="~/Scripts/jquery-1.10.1.min.js"></script>*@
     <script src="~/Scripts/jquery-1.7.1.min.js"></script>
     <script src="~/Scripts/jquery.easing.1.3.js"></script>
     <script src="~/Scripts/superfish.js"></script>
@@ -19,6 +21,8 @@
     <script src="~/Scripts/jquery.ui.totop.js"></script>
     <script src="~/Scripts/camera.js"></script>
     <script src="~/Scripts/jquery.mobilemenu.js"></script>
+    @*<script src="~/Scripts/jquery.tooltipster.min.js"></script>*@
+    <script src="~/Scripts/jquery.tooltipster.js"></script>
     <!--[if (gt IE 9)|!(IE)]><!-->
     <script type="text/javascript" src="~/Scripts/jquery.mobile.customized.min.js"></script>
     <!--<![endif]-->
