--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <meta name="author" content="Your name">
     <link rel="stylesheet" href="~/Content/css/camera-slider.css">
     <link rel="stylesheet" type="text/css" media="screen" href="~/Content/css/style.css">
+    <link href="~/Content/css/barcaliente.css" rel="stylesheet" />
     <link href="~/Content/css/tooltipster.css" rel="stylesheet" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
@@ -54,7 +55,7 @@
                         <header>
                             <div class="order">
                                 <em>Zamów teraz!</em>
-                                <a href="#"><span>690</span> 907 690</a>
+                                <a href="tel:+690907690"><span>690</span> 907 690</a>
                             </div>
                             <div class="clear"></div>
                             <h1><a href="index.html">
