--- a/Barcaliente.WebUI/Views/Home/SpecialOrders.cshtml
+++ b/Barcaliente.WebUI/Views/Home/SpecialOrders.cshtml
@@ -16,7 +16,7 @@
                 </figure>
                 <span class="font-14">Przykładowe menu dla 4 osób za 200 PLN:</span>
                 <ul class="list">
-                    <li>Kanapeczki bankietowe 24szt:s
+                    <li>Kanapeczki bankietowe 24szt:
                     <ul>
                         <li>z mascarpone i ziołami</li>
                         <li>śledź a'la łosoś</li>
