few photos changed, and proper logo added

--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -7,7 +7,9 @@
                     <div data-src="Content/images/meals/Chiliconcarne.jpg"></div>
                     <div data-src="Content/images/meals/fajita.jpg"></div>
                     <div data-src="Content/images/meals/greckasalatka.jpg"></div>
-                    @*<div data-src="Content/images/dishes/slide-3.jpg"></div>*@
+                    <div data-src="Content/images/meals/donkoguttosałatka.jpg"></div>
+                    <div data-src="Content/images/meals/karkowkamuchomacho.jpg"></div>
+                    <div data-src="Content/images/meals/koreczki.jpg"></div>
                 </div>
             </div>
         </article>
@@ -109,7 +111,7 @@
         <div class="grid_3">
             <div class="inner-block">
                 <figure>
-                    <img src="~/Content/images/page-img-2.jpg" alt="">
+                    <img src="~/Content/images/page-img-3.jpg" alt="">
                 </figure>
                 <div class="block-3">
                     <span class="font-14">Perfekcyjna grzanka czosnkowa</span>
@@ -126,7 +128,7 @@
         <div class="grid_3">
             <div class="inner-block">
                 <figure>
-                    <img src="~/Content/images/page-img-3.jpg" alt="">
+                    <img src="~/Content/images/page-img-2.jpg" alt="">
                 </figure>
                 <div class="block-3">
                     <span class="font-14">Danie dnia.</span>
