--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                             </div>
                             <div class="clear"></div>
                             <h1><a href="index.html">
-                                <img src="~/Content/images/logo.png" alt=""></a></h1>
+                                <img src="~/Content/images/logo-barcaliente.png" alt=""></a></h1>
                             <nav>
                                 <ul class="sf-menu responsive-menu">
                                     @Html.MenuItem("Home", "Index", "Home")<strong></strong>
