--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
                     <div data-src="Content/images/meals/donkoguttosałatka.jpg"></div>
                     <div data-src="Content/images/meals/karkowkamuchomacho.jpg"></div>
                     <div data-src="Content/images/meals/koreczki.jpg"></div>
+                    <div data-src="Content/images/meals/tacos.jpg"></div>
                 </div>
             </div>
         </article>
