--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -58,8 +58,8 @@
                                 <a href="tel:+690907690"><span>690</span> 907 690</a>
                             </div>
                             <div class="clear"></div>
-                            <h1><a href="index.html">
-                                <img src="~/Content/images/logo2.png" alt=""></a></h1>
+                            <h1><a href="#">
+                                <img src="~/Content/images/logo.png" alt=""></a></h1>
                             <nav>
                                 <ul class="sf-menu responsive-menu">
                                     @Html.MenuItem("Home", "Index", "Home")<strong></strong>
