--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -148,7 +148,7 @@
 <script>
         $(window).load(function () {
             jQuery('#camera').camera({
-                pagination: true,
+                pagination: false,
                 navigation: false,
                 transPeriod: 2000,
                 fx: 'simpleFade',
