removed one photo from index

--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
                     <div data-src="Content/images/meals/Chiliconcarne.jpg"></div>
                     <div data-src="Content/images/meals/fajita.jpg"></div>
                     <div data-src="Content/images/meals/greckasalatka.jpg"></div>
-                    <div data-src="Content/images/meals/donkoguttosałatka.jpg"></div>
+                    @*<div data-src="Content/images/meals/donkoguttosałatka.jpg"></div>*@
                     <div data-src="Content/images/meals/karkowkamuchomacho.jpg"></div>
                     <div data-src="Content/images/meals/koreczki.jpg"></div>
                     <div data-src="Content/images/meals/tacos.jpg"></div>
