--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -74,13 +74,14 @@
     <div class="container_12">
         <div class="grid_12">
             <div class="inner-block">
-                <h2 class="bg-h2">Polecane <span>dania</span></h2>
+                <h2 class="padd ">Polecane <span>dania</span></h2>
             </div>
         </div>
         <div class="grid_3">
             <div class="inner-block">
                 <figure>
-                    <img src="~/Content/images/page-img.jpg" alt="">
+                    @*<img src="~/Content/images/page-img.jpg" alt="">*@
+                    <img src="~/Content/images/meals/thumbnails/donkoguttosałatka.jpg" />
                 </figure>
                 <div class="block-3">
                     <span class="font-14">Idealna na lato sałatka don'kogutto</span>
@@ -96,7 +97,8 @@
         <div class="grid_3">
             <div class="inner-block">
                 <figure>
-                    <img src="~/Content/images/page-img-1.jpg" alt="">
+                    <img src="~/Content/images/meals/thumbnails/karkowkamuchomacho.jpg" />
+                    @*<img src="~/Content/images/page-img-1.jpg" alt="">*@
                 </figure>
                 <div class="block-3">
                     <span class="font-14">Karkówka mucho macho pikantna</span>
@@ -112,7 +114,8 @@
         <div class="grid_3">
             <div class="inner-block">
                 <figure>
-                    <img src="~/Content/images/page-img-3.jpg" alt="">
+                    @*<img src="~/Content/images/page-img-3.jpg" alt="">*@
+                    <img src="~/Content/images/meals/thumbnails/Cheesy-Garlic-Bread-11-600x398.jpg" />
                 </figure>
                 <div class="block-3">
                     <span class="font-14">Perfekcyjna grzanka czosnkowa</span>
