--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
             <div class="inner-block">
                 <figure>
                     @*<img src="~/Content/images/page-img.jpg" alt="">*@
-                    <img src="~/Content/images/meals/thumbnails/donkoguttosałatka.jpg" />
+                    <img src="~/Content/images/meals/thumbnails/donkoguttosalatka.jpg" />
                 </figure>
                 <div class="block-3">
                     <span class="font-14">Idealna na lato sałatka don'kogutto</span>
