--- a/Barcaliente.WebUI/Views/Home/Contact.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Contact.cshtml
@@ -16,7 +16,7 @@
                                 84-120 Władysławowo</dt>
                             <dd><span>Telefon:</span>690 907 690</dd>
                         </dl>
-                        <p>W poniedziałki nieczynne, wtorek - niedziela od 13 do 22</p>
+                        <p>W poniedziałki nieczynne, wtorek - niedziela od 13 do 22.</p>
                         <p>Dostawa od godziny 13 do 22.</p>
                         <p>Zamówienia przyjmujemy do godziny 21.30</p>
                         <p>Minimalna kwota zamówienia na telefon  20 zł</p>
