--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
     <meta name="description" content="barcaliente">
-    <meta name="keywords" content="barcaliente">
+    <meta name="keywords" content="barcaliente,pizza,władysławowo,menu,dowoz,dowóz,zamówienia,jedzenie,fast,food,sałatki,salatki,miesa,mięsa,karkówka,karkowka,grzanka,ryby">
     <meta name="author" content="Piotr Polański">
     <link rel="stylesheet" href="~/Content/css/camera-slider.css">
     <link rel="stylesheet" type="text/css" media="screen" href="~/Content/css/style.css">
